--- a/src/styles/Projects.module.scss
+++ b/src/styles/Projects.module.scss
@@ -2,16 +2,15 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   gap: 20px;
-  max-width: 1200px;
 }
 
 .projectCard {
   width: 100%;
-  border: 3px solid black;
+  border: 3px solid var(--card-border);
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  background-color: white;
+  background-color: var(--card-color);
   overflow: hidden;
   height: 100%; 
 }
@@ -20,11 +19,13 @@
   display: flex;
   flex-direction: column;
   height: 100%; // Take full height of the card
+  color: var(--card-text-color);
 }
 
 .titleBar {
-  background-color: grey;
+  background-color: var(--card-title-color);
   margin-bottom: 1rem;
+  cursor: pointer;
   & h3{
     margin-left: .5rem;
     color: white;
@@ -38,6 +39,7 @@
   display: flex;
   flex-direction: column;
   margin-left: .5rem;
+  color: var(--card-color);
 }
 
 .elevatorPitch {
@@ -51,7 +53,7 @@
 }
 
 .technologiesGrid {
-  background-color: grey;
+  background-color: var(--card-title-color);
   padding: 1rem;
   display: flex;
   justify-content: space-evenly;
